# My_Repos_DashBoard

./: .env  .gitignore  CLAUDE.md  README.md  index.html  main.py  pyproject.toml  restart.bat  start.bat  start.py  start_hidden.vbs  status.bat  stop.bat
.claude/: settings.local.json
src/my_repos_dashboard/: __init__.py  __main__.py  main.py
src/my_repos_dashboard/api/: __init__.py  actions.py  commands.py  context.py  git.py  pinned.py  projects.py  worktrees.py
src/my_repos_dashboard/core/: __init__.py  config.py  git_utils.py  worktree_ops.py
src/my_repos_dashboard/models/: __init__.py  schemas.py
src/my_repos_dashboard/static/: index.html
